# ushannon_ui

./: .flake  .flake8  README.md  pyproject.toml
src/config/: env.py  path.py
src/ushannon_ui/: conftest.py
src/ushannon_ui/pages/: backend_login.py  login.py
src/ushannon_ui/tests/: conftest.py  test_login_page.py
src/utils/: decorators.py  file_loader.py  logger.py  random_data_maker.py
