[project]
name = "ushannon_ui"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "chuangxinwei", email = "18210880215@163.com"},
]
dependencies = ["colorlog>=6.9.0"]
requires-python = ">=3.13"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"


[tool.pdm]
distribution = true

[dependency-groups]
dev = [
    "black>=24.10.0",
    "isort>=5.13.2",
    "flake8>=7.1.1",
]


[tool.isort]
profile = "black"
multi_line_output = 3

[tool.black]
exclude = '''
/(
    \.git
  | \.hg
  | \.tox
  | venv
  | buck-out
  | build
  | dist
)/
'''

[tool.pdm.scripts]
check = { composite = [
    "isort .",
    "black .",
    "flake8 ."
] }
test = "pytest"
