[project]
name = "ushannon_ui"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "chuangxinwei", email = "18210880215@163.com"},
]
dependencies = ["colorlog>=6.9.0", "pytest>=8.3.4", "playwright>=1.49.0", "requests>=2.32.3", "pymysql>=1.1.1"]
requires-python = ">=3.13"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.pdm]
distribution = true

[dependency-groups]
dev = [
    "black>=24.10.0",
    "isort>=5.13.2",
    "flake8>=7.1.1",
]

[tool.isort]
profile = "black"
multi_line_output = 3

[tool.black]
exclude = '''
/(
    \.git
  | \.hg
  | \.tox
  | buck-out
  | build
  | dist
  | __pycache__
  | .venv
  | venv
  .\.venv
)/
'''

[tool.flake8]
max-line-length = 88
ignore = ["E501", "E203", "W503"]
exclude = [".git", "__pycache__", ".venv", "venv", "build", "dist"]

[tool.pdm.scripts]
check = { composite = [
    "isort .",
    "black .",
    "flake8 . --exclude=.venv"
] }
test = "pytest"

